src/assets/css/mod_toplist.css
div#mod_toplist {
    border-top: 0.092vh solid rgba(var(--color_r), var(--color_g), var(--color_b), 0.3);
    font-family: var(--font_main_light);
    letter-spacing: 0.092vh;
    padding: 0.645vh 0vh;
    display: flex;
    flex-wrap: wrap;
}

div#mod_toplist::before {
    content: "";
    border-left: 0.092vh solid rgba(var(--color_r), var(--color_g), var(--color_b), 0.3);
    align-self: flex-start;
    position: relative;
    left: -0.092vh;
    top: -1.111vh;
    height: 0.833vh;
}

div#mod_toplist::after {
    content: "";
    border-right: 0.092vh solid rgba(var(--color_r), var(--color_g), var(--color_b), 0.3);
    position: relative;
    right: -15.4vw;
    top: -13vh;
    height: 0.833vh;
}

div#mod_toplist h1 {
    font-size: 1.48vh;
    margin: 0vh;
    margin-bottom: -1vh;
    width: 97%;
    padding-left: 0.5vh;
}

div#mod_toplist i {
    font-style: normal;
    font-size: 1.20vh;
    opacity: 0.5;
    text-align: right;
    display: inline-block;
    position: relative;
    bottom: 1.6vh;
    width: 100%;
}

table#mod_toplist_table {
    margin: 0px;
    margin-bottom: 0.2vh;
    width: 97%;
    padding-left: 0.5vh;
}

table#mod_toplist_table > td {

}

